# uplink

./: .gitignore  Cargo.toml  LICENSE  LICENSE.md  README.md  build.rs
src/: client.rs  command.rs  communication.rs  compression.rs  crypto.rs  envelope.rs  file_operations.rs  io.rs  main.rs  proxy.rs  response_handler.rs  rx_command_handler.rs  server.rs  tx_command_handler.rs
src/crypto/: aes.rs  envelope.rs  mod.rs
src/enums/: command.rs  mod.rs  response.rs
src/handlers/: cli_handler.rs  mod.rs  response_handler.rs  rx_command_handler.rs  tx_command_handler.rs
src/shared_state/: mod.rs  shared_state.rs
src/static/: index.html
src/transport/: communication.rs  compression.rs  mod.rs
src/uplink_client/: mod.rs  uplink_client.rs
src/uplink_server/: mod.rs  uplink_server.rs
