[package]
name = "uplink"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10.3"
sha2 = "0.10"
hkdf = "0.12.4"
rand = "0.8"
generic-array = "1.1.0"
flate2 = "1.0"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
tokio-tungstenite = "0.23.1"
url = "2.2" 
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio-stream = "0.1"

[features]
precompiled_mode = []
precompiled_address = []
precompiled_passphrase = []

[package.metadata]
precompiled_mode = { value = "\"server\"" } 
precompiled_address = { value = "\"127.0.0.1:8080\"" }  
precompiled_passphrase = { value = "\"my_precompiled_passphrase\"" }  